# test-jsi-sodium

./: CONTRIBUTING.md  LICENSE  README.md  fibonachos.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fibonachos/: FibonachosModule.java  FibonachosPackage.java
cpp/: fibonachos.cpp  react-native-fibonachos.cpp  react-native-fibonachos.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/fibonachos/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/fibonachos/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/FibonachosExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/FibonachosExample.xcodeproj/: project.pbxproj
example/ios/FibonachosExample.xcodeproj/xcshareddata/xcschemes/: FibonachosExample.xcscheme
example/ios/FibonachosExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Fibonachos.h  Fibonachos.mm
ios/Fibonachos.xcodeproj/: project.pbxproj
src/: index.tsx
